<resources>
    <string name="app_name">M4_Individual6</string>
    <string name="btn_crearCuenta">Crear Cuenta</string>
    <string name="eTx_nombreHint">Nombre</string>
    <string name="eTx_apellidosHint">Apellidos</string>
    <string name="eTx_correoHint">Correo electrónico</string>
    <string name="eTx_claveHint">Contraseña</string>
    <string name="img_retrato_desc">Retrato del empleado</string>
    <string name="toast_usuarioCreado">Usuario Creado</string>
    <string name="toast_faltanParametros">Faltan parametros.</string>
    <string name="faltaNombre">Nombre</string>
    <string name="faltaApellidos">Apellidos</string>
    <string name="faltaCorreo">Correo</string>
    <string name="faltaClave">Contraseña</string>
</resources>